--- a/config.toml
+++ b/config.toml
@@ -1,13 +1,13 @@
 relativeURLs = true
 googleAnalytics = "UA-159072578-1"
-title = "Stefanie Stantcheva"
+title = "Emre Oral"
 theme = "academimal"
 sectionPagesMenu = "main"
 defaultContentLanguage = "en"
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
 [author]
-name = "Stefanie Stantcheva"
+name = "Emre Oral"
 
 [markup] # needed to add html in .md
   [markup.goldmark]
@@ -15,8 +15,8 @@ name = "Stefanie Stantcheva"
       unsafe = true
 
 [params]
-title = "Nathaniel Ropes Professor of Political Economy,"
-institution = "Harvard University"
-logo = "Stefanie_Stantcheva_headshot_signed_fil-3.jpg"
-Twitter = "S_Stantcheva"
-Email = "sstantcheva@fas.harvard.edu"
+title = ""
+institution = "University of Mannheim"
+logo = "emre_workphoto.png"
+Twitter = "emreoral_"
+Email = "emre.oral@uni-mannheim.de"
