--- a/config.toml
+++ b/config.toml
@@ -17,6 +17,6 @@ name = "Emre Oral"
 [params]
 title = ""
 institution = "University of Mannheim"
-logo = "emre_workphoto.png"
+logo = "emre_workphoto.jpg"
 Twitter = "emreoral_"
 Email = "emre.oral@uni-mannheim.de"
