--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -4,7 +4,7 @@ worksinprogress:
 
 - title: "Social Determinants of Retirement" 
   pdflink: "" 
-  coauthors: "Arthur Seibold, Simon Rabate"
+  coauthors: "Arthur Seibold, Simon Rabaté"
   book: ""
   year: "" 
   links: 
