--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -4,7 +4,7 @@ worksinprogress:
 
 - title: "Social Determinants of Retirement" 
   pdflink: "" 
-  coauthors: "Arthur Seibold, Simon Rabaté"
+  coauthors: "[Arthur Seibold](https://www.arthurseibold.com), [Simon Rabaté](https://simonrabate.github.io)"
   book: ""
   year: "" 
   links: 
