CV and some other things

--- a/data/research/research.yaml
+++ b/data/research/research.yaml
@@ -2,4 +2,4 @@
 
 worksinprogress:
 - title: "The Social Determinants of Retirement"
-  coauthors: "[Arthur Seibold](https://www.arthurseibold.com) and [Simon Rabaté](https://simonrabate.github.io)"
+  coauthors: "Arthur Seibold and Simon Rabaté"
