--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ name = "Emre Oral"
       unsafe = true
 
 [params]
-title = "PhD Student"
+title = "PhD Student in Economics"
 institution = "University of Mannheim"
 logo = "emre_workphoto.jpg"
 Twitter = "emreoral_"
