--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 relativeURLs = true
-googleAnalytics = "UA-159072578-1"
+googleAnalytics = "G-K32LVV900X"
 title = "Emre Oral"
 theme = "academimal"
 sectionPagesMenu = "main"
